# SANN

./: Cargo.toml  README.md  test.json
benches/: train.rs  v1.rs
src/: activations.rs  io.rs  layer.rs  lib.rs  main.rs  network.rs  node.rs
src/algorithms/: mod.rs
src/layer/: dense.rs  dropout.rs  mod.rs
src/lib/: activations.rs  layer.rs  mod.rs  network.rs  neural_net.rs  node.rs  perceptron.rs
src/lib/layer/: activations.rs  dense.rs
src/nn2/: helper.rs  layer.rs  mod.rs  network.rs  node.rs
src/v2/: mod.rs
tests/: ann.rs  benchmark.rs  example.rs  train.rs  v2.rs
