[package]
name = "sann"
version = "0.1.0"
edition = "2018"
authors = ["Thiago Chaves <thibousbr@gmail.com>"]
license = "Apache-2.0"
description = "Simple Neural Network"
readme = "README.md"
homepage = "https://github.com/Suniaster/SANN"
repository = "https://github.com/Suniaster/SANN"
keywords = ["nn", "neural-network", "perceptron"]
categories = ["accessibility"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sann"
path = "src/lib/mod.rs"

[dependencies]
vectors = "0.3.0"
ndarray = "0.15.0"
rand = "0.8.0"