[package]
name = "sann"
version = "0.1.0"
edition = "2018"
authors = ["Thiago Chaves <thibousbr@gmail.com>"]
license = "Apache-2.0"
description = "Simple Neural Network"
readme = "README.md"
homepage = "https://github.com/Suniaster/SANN"
repository = "https://github.com/Suniaster/SANN"
keywords = ["nn", "neural-network", "perceptron"]
categories = ["accessibility"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vectors = "0.3.0"
ndarray = { version = "0.15.0", features = ["serde"] }
rand = "0.8.0"
time-test = "*"
rustc-serialize = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# [[bin]]
# name = "sann"
# path = "src/main.rs"

# [lib]
# name = "sann"
# path = "src/lib.rs"
